# RealsenseWrapper

./: .gitmodules  CMakeLists.txt
src/: rs_wrapper.cpp  rs_wrapper.h
